@@ -7,6 +7,7 @@ dl 0.8:
 * Do not purge tickets prematurely after an unsuccessful download.
 * Purge tickets immediately after the download, when possible.
 * useradmin now allows to reset/change user role and password.
+* All notifications are now sent using the default locale.
 
 
 dl 0.7: 10/03/2010
